# 6nimmt

./: .gitignore  CMakeLists.txt  README.md  card_sprite.aseprite  main.cpp
.vscode1/: launch.json  launch_django.json  settings.json  tasks.json
boardgames/: db.sqlite3
boardgames/boardgames/: settings.py  urls.py
boardgames/sixnimmt/: admin.py  apps.py  game_service.py  models.py  urls.py  views.py
boardgames/sixnimmt/migrations/: 0001_initial.py
bots/: TODO.txt  tasks.json
bots/include/: game_factory.h  globals.h  utils.h
bots/include/core/: board.h  card.h  deck.h  game.h  move.h  player.h
bots/include/engines/: engine.h  human_engine.h  mc_engine.h  mcts_engine.h  random_engine.h
bots/src/: game_factory.cpp  globals.cpp  main.cpp  mainD.cpp  main_human_play.cpp  utils.cpp
bots/src/core/: Board.cpp  Game.cpp  card.cpp  deck.cpp  move.cpp  player.cpp
bots/src/engines/: human_engine.cpp  mc_engine.cpp  mcts_engine.cpp  random_engine.cpp
ui/: CMakeLists.txt  CMakeLists1.txt  CMakeLists11.txt  README.md
ui/cards/: 100.aseprite  101.aseprite  Sprite-0001.aseprite
ui/include/: assets.h  card.h  card_texture.h  click_handler.h  globals.h  graphics_handler.h
ui/src/: assets.cpp  card.cpp  card_texture.cpp  click_handler.cpp  globals.cpp  graphics_handler.cpp  main.cpp
